<resources>
    <string name="app_name">ULive</string>
    <string name="settings">设置</string>
    <string name="help">帮助</string>
    <string name="string_help_text">当前应用缺少必要权限。\n\n请点击\"设置\"-\"权限\"-打开所需权限。\n\n最后点击两次后退按钮，即可返回。</string>
    <string name="quit">退出</string>
    <string name="sdk_address">https://github.com/umdk</string>
    <string name="controller_start">开始</string>
    <string name="controller_stop">结束</string>
    <string name="controller_mute">静音</string>
    <string name="controller_unmute">非静音</string>
    <string name="controller_mix">混音</string>
    <string name="controller_no_mix">非混音</string>
    <string name="controller_mirror">镜像</string>
    <string name="controller_no_mirror">非镜像</string>
    <string name="controller_gpu">GPU</string>
    <string name="controller_cpu">CPU</string>
    <string name="controller_hw">硬编</string>
    <string name="controller_sw">软编</string>
    <string name="controller_landspace">横屏</string>
    <string name="controller_portrait">竖屏</string>
    <string name="controller_captureframe">截帧</string>
    <string name="controller_beatuy">美颜</string>
    <string name="controller_special_filter">风格</string>
    <string name="controller_flash">闪光灯</string>
    <string name="controller_texture">动态贴纸</string>
    <string name="controller_camera">摄像头</string>
    <string name="controller_exit">退出</string>
    <string name="controller_float_window">开启悬浮窗</string>
    <string name="controller_no_float_window">关闭悬浮窗</string>
    <string name="controller_start_rtmp">开始RTMP推流</string>
    <string name="controller_stop_rtmp">结束RTMP推流</string>
    <string name="controller_start_line">发起连麦</string>
    <string name="controller_stop_line">结束连麦</string>
    <string name="debug_debug">[调  试]</string>
    <string name="debug_copy">[复  制]</string>
    <string name="debug_clear">[清  屏]</string>
    <string name="info_bitrate">%1$sK/s</string>
    <string name="info_bitrate_bs">%1$sB/s</string>
    <string name="info_time">00:00</string>
    <string name="info_network_block_count">network block count: %1$s</string>
    <string name="video_bitrate">视频码率: </string>
    <string name="videobitrate_low">LOW</string>
    <string name="videobitrate_normal">NORMAL</string>
    <string name="videobitrate_medium">MEDIUM</string>
    <string name="videobitrate_high">HIGH</string>
    <string name="capture_ratio">采集画幅: </string>
    <string name="videoaspect_auto">AUTO</string>
    <string name="videoaspect_4x3">4x3</string>
    <string name="videoaspect_16x9">16x9</string>
    <string name="videoframerate">采集帧率: </string>
    <string name="videoframerate_default">20</string>
    <string name="video_capture_oritiontation">采集方向: </string>
    <string name="portrait_orientation">竖屏</string>
    <string name="landspace_orientation">横屏</string>
    <string name="network_link">网络线路: </string>
    <string name="network_link1">线路1</string>
    <string name="network_link2">线路2</string>
    <string name="stream_id">推拉流地址: </string>
    <string name="stream_id_default">请到各云厂商（优刻得、阿里云等）获取直播地址</string>
    <string name="sdk_version">版本: </string>
    <string name="filter_mode">滤镜类型:  </string>
    <string name="filter_cpu">CPU</string>
    <string name="filter_gpu">GPU</string>
    <string name="codec_mode">编码类型: </string>
    <string name="return_index">返回首页</string>
    <string name="stream_over">直播结束</string>
    <string name="skin_beauty">美颜</string>
    <string name="skin_level">强度</string>
    <string name="skin_tone">红润</string>
    <string name="skin_bright">明亮</string>
    <string name="skin_mask">遮罩</string>
    <string name="loading">玩命加载中....</string>
    <string name="float_window_permission_request_failed">悬浮窗权限申请失败，请到设置开启相关权限</string>
    <string name="app_id"></string>
</resources>
