<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimaryDark"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        tools:context="com.ucloud.ulive.example.ext.com.ucloud.ulive.example.MainActivity" />

    <ListView
        android:id="@+id/listview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/listview"
        android:layout_below="@id/toolbar"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dip"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dip"
                    android:text="@string/sdk_version" />

                <TextView
                    android:id="@+id/txtv_version"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autoLink="web" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dip"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dip"
                    android:text="@string/filter_mode" />

                <RadioGroup
                    android:id="@+id/rg_filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rb_gpufilter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/filter_gpu" />

                    <RadioButton
                        android:id="@+id/rb_cpufilter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/filter_cpu" />

                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dip"
                    android:orientation="horizontal">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dip"
                        android:text="@string/codec_mode" />

                <RadioGroup
                        android:id="@+id/rg_codec"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                    <RadioButton
                            android:id="@+id/rb_hwcodec"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="true"
                            android:text="@string/controller_hw" />

                    <RadioButton
                            android:id="@+id/rb_swcodec"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/controller_sw" />

                </RadioGroup>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dip"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dip"
                        android:text="@string/video_bitrate" />

                    <RadioGroup
                        android:id="@+id/rg_videobitrate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <RadioButton
                            android:id="@+id/rb_videobitrate_low"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/videobitrate_low" />

                        <RadioButton
                            android:id="@+id/rb_videobitrate_normal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="true"
                            android:text="@string/videobitrate_normal" />

                        <RadioButton
                            android:id="@+id/rb_videobitrate_medium"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/videobitrate_medium" />

                        <RadioButton
                            android:id="@+id/rb_videobitrate_high"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/videobitrate_high" />

                    </RadioGroup>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dip"
                        android:text="@string/capture_ratio" />

                    <RadioGroup
                        android:id="@+id/rg_videoaspect"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <RadioButton
                            android:id="@+id/rb_videoaspect_auto"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="true"
                            android:text="@string/videoaspect_auto" />

                        <RadioButton
                            android:id="@+id/rb_videoaspect_4x3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/videoaspect_4x3" />

                        <RadioButton
                            android:id="@+id/rb_videoaspect_16x9"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/videoaspect_16x9" />

                    </RadioGroup>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dip"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dip"
                    android:text="@string/videoframerate" />

                <EditText
                    android:id="@+id/edtxt_framerate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:text="@string/videoframerate_default" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dip"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dip"
                    android:text="@string/video_capture_oritiontation" />

                <RadioGroup
                    android:id="@+id/rg_capture_orientation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rb_capture_orientation_portrait"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/portrait_orientation" />

                    <RadioButton
                        android:id="@+id/rb_capture_orientation_landspace"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/landspace_orientation" />

                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dip"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dip"
                    android:text="@string/network_link" />

                <RadioGroup
                    android:id="@+id/rg_line"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rb_line1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/network_link1" />

                    <RadioButton
                        android:id="@+id/rb_line2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/network_link2" />

                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dip"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dip"
                    android:text="@string/stream_id" />

                <EditText
                    android:id="@+id/edtxt_streaming_id"
                    android:inputType="text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/stream_id_default" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>