<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/bottombar_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="4dip">

            <Button
                android:id="@+id/img_bt_filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.7"
                android:onClick="onToggleFilterBtnClick"
                android:text="@string/controller_beatuy" />

            <Button
                android:id="@+id/img_bt_face_detector"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.7"
                android:onClick="onToggleFaceDetectorBtnClick"
                android:text="@string/controller_texture" />

            <Button
                android:id="@+id/img_bt_switch_camera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.7"
                android:onClick="onSwitchCameraBtnClick"
                android:text="@string/controller_camera" />

            <Button
                android:id="@+id/img_bt_lamp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.7"
                android:onClick="onToggleFlashModeBtnClick"
                android:text="@string/controller_flash" />

        </LinearLayout>

    </FrameLayout>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/rightbar_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bottombar_container"
        android:layout_alignParentEnd="true">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/img_bt_record"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.7"
                android:onClick="onToggleRecordBtnClick"
                android:text="@string/controller_start" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.7"
                android:onClick="onToggleMuteBtnClick"
                android:text="@string/controller_mute" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.7"
                android:onClick="onToggleRawAudioMixClick"
                android:text="@string/controller_mix" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.7"
                android:onClick="onToggleFrontCameraOutputFlipBtnClick"
                android:text="@string/controller_mirror" />

            <Button
                    android:id="@+id/btn_toggle_codec_mode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:alpha="0.7"
                    android:onClick="onToggleCodecModeBtnClick"
                    android:text="@string/controller_hw" />

            <Button
                android:id="@+id/btn_toggle_filter_mode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.7"
                android:onClick="onToggleFilterModeBtnClick"
                android:text="@string/controller_gpu" />

            <Button
                android:id="@+id/btn_toggle_caputre_orientation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.7"
                android:onClick="onToggleCaptureOrientationBtnClick"
                android:text="@string/controller_portrait" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.7"
                android:onClick="onVideoFrameCaptureBtnClick"
                android:text="@string/controller_screenshot" />

            <Button
                android:id="@+id/img_bt_close_record"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.7"
                android:onClick="onStopStreamingBtnClick"
                android:text="@string/controller_exit" />
        </LinearLayout>
    </ScrollView>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/bottombar_container"
        android:layout_toStartOf="@id/rightbar_container">

        <include layout="@layout/live_layout_live_room_debug_pannel"></include>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:clickable="true"
                android:focusable="true"
                android:onClick="onToggleDebugInfoVisibleBtnClick"
                android:text="@string/debug_debug"
                android:textColor="@android:color/holo_blue_dark" />

            <TextView
                android:id="@+id/copy_to_clipboard_txtv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:clickable="true"
                android:focusable="true"
                android:onClick="onCopyDebugLogBtnClick"
                android:text="@string/debug_copy"
                android:textColor="@android:color/holo_blue_dark"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/clear_debug_info_txtv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:clickable="true"
                android:focusable="true"
                android:onClick="onClearDebugLogBtnClick"
                android:text="@string/debug_clear"
                android:textColor="@android:color/holo_blue_dark"
                android:visibility="invisible" />

        </LinearLayout>
    </FrameLayout>


</RelativeLayout>