<com.ucloud.ulive.example.widget.AudioControllerView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/live_audio_panel"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scrollview_rightbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentEnd="true">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_toggle_record"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.7"
                android:text="@string/controller_start"/>

            <Button
                android:id="@+id/btn_toggle_mute"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.7"
                android:text="@string/controller_mute" />

            <Button
                android:id="@+id/btn_toggle_mix"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.7"
                android:text="@string/controller_mix" />

            <Button
                android:id="@+id/btn_exit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.7"
                android:text="@string/controller_exit"/>
        </LinearLayout>
    </ScrollView>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_toStartOf="@id/scrollview_rightbar">

        <FrameLayout
            android:id="@+id/fl_debug_info_pannel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#60eeeeee"
            android:visibility="invisible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="top"
                android:orientation="vertical"
                android:padding="4dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/txtv_bitrate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:visibility="invisible"/>

                    <TextView
                        android:id="@+id/txtv_recording_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:visibility="invisible"/>

                </RelativeLayout>

                <TextView
                    android:id="@+id/txtv_framerate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="invisible"/>

                <TextView
                    android:id="@+id/txtv_stream_env_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="invisible"/>

                <TextView
                    android:id="@+id/txtv_network_block_count"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/holo_red_light"/>

                <ScrollView
                    android:id="@+id/scrollview_debug_log_pannel"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/txtv_debug_log"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </ScrollView>
            </LinearLayout>
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtv_toggle_debug_log_vivisble"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/debug_debug"
                android:textColor="@android:color/holo_blue_dark"/>

            <TextView
                android:id="@+id/txtv_copy_to_clipboard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/debug_copy"
                android:textColor="@android:color/holo_blue_dark"
                android:visibility="invisible"/>

            <TextView
                android:id="@+id/txtv_clear_debug_log"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/debug_clear"
                android:textColor="@android:color/holo_blue_dark"
                android:visibility="invisible"/>
        </LinearLayout>
    </FrameLayout>

</com.ucloud.ulive.example.widget.AudioControllerView>